Enabled archiving of Bulletin Board posts.

--- a/tools/bboard/client-web/html/index.html
+++ b/tools/bboard/client-web/html/index.html
@@ -158,6 +158,21 @@
       </div>
     </div>
 
+    <!--
+    ====================================================================
+    Post/Comment Archive Popup Dialog
+    ====================================================================
+    -->
+
+    <div id="bboard-archivePopup" style="display:none">
+      <h3 id="bboard-archivePopupPrompt" align="center">
+        Are you sure you want to archive this post?
+      </h3>
+      <h3 id="bboard-archivePopupWorking" align="center">
+        Archiving... <img src="$theme/client-web/img/working.gif" />
+      </h3>
+    </div>
+
     <div class="bboardClear">&nbsp;</div>
   </div></div>
 </body>
